# rocket-simple-api

./: Cargo.toml
src/: handler.rs  main.rs  model.rs  response.rs
